Revision history for Perl extension Thrift::XS.

1.01
        - Added compact protocol support.
        - Documented the rest of the XS modules.
        - Fixed bug in writeBool that caused it to always write a true value.

1.00    2011-02-22
        - Initial release.